syntax = "proto3";

package kvpb;

message CreateBucket {
  bytes name = 1;
}

message DeleteBucket {
  bytes name = 1;
}

message Compare {
  bytes bucket = 1;
  bytes key = 2;
  int64 version = 3;
}

message Operation {
  bytes bucket = 1;
  bytes key = 2;
  bytes value = 3;
  bool deletion = 4;
}

message Txn {
  // compares is a list of predicates representing a conjunction of terms.
  // If the comparisons succeed, then the success requests will be processed in order,
  // and the response will contain their respective responses in order.
  // If the comparisons fail, then the failure requests will be processed in order,
  // and the response will contain their respective responses in order.
  repeated Compare compares = 1;

  // successes is a list of requests which will be applied when compare evaluates to true.
  repeated Operation successes = 2;
  // failures is a list of requests which will be applied when compare evaluates to false.
  repeated Operation failures = 3;
}

message Compact {
  uint64 version = 1;
}

message InternalRequest {
  uint64 ID = 1;

  oneof request {
    CreateBucket create_bucket = 2;
    DeleteBucket delete_bucket = 3;

    Txn txn = 4;
    Compact compact = 5;
  }
}

message InternalResponse {
  uint64 ID = 1;
}
